--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -33,7 +33,7 @@
           </picture>
           <div class="hero-picture-text">
             <p class="hero-text">Get 10% off your first order</p>
-            <a href="#books" class="hero-btn" type="button">Shop Now!</a>
+            <a href="#books" class="hero-btn">Shop Now!</a>
           </div>
         </li>
         <li class="swiper-slide hero">
