--- a/src/partials/events.html
+++ b/src/partials/events.html
@@ -18,6 +18,7 @@
               /img/events-images/events-card1@1x.png 1x,
               /img/events-images/events-card1@2x.png 2x
             "
+            src="/img/events-images/events-card1@1x.png"
             alt="events-photo width reading people"
           />
           <div>
@@ -42,7 +43,8 @@
               /img/events-images/events-card2@1x.png 1x,
               /img/events-images/events-card2@2x.png 2x
             "
-            alt="Jane"
+            src=" /img/events-images/events-card2@1x.png"
+            alt="Event"
           />
           <div>
             <h3 class="event-name">Cozy Book Club — “The Midnight Library”</h3>
@@ -66,7 +68,8 @@
               /img/events-images/events-card3@1x.png 1x,
               /img/events-images/events-card3@2x.png 2x
             "
-            alt="Jane"
+            src="/img/events-images/events-card3@1x.png"
+            alt="Event"
           />
           <div>
             <h3 class="event-name">Cozy Book Club — “The Midnight Library”</h3>
