--- a/src/css/books.css
+++ b/src/css/books.css
@@ -72,6 +72,8 @@
   font-size: 14px;
   line-height: 150%;
   color: #0b0500;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .books .container .books-wrapper .list-books .book-info {
@@ -104,6 +106,7 @@
 
 .books .container .books-wrapper .list-books .book-info .book-cover img {
   width: 100%;
+  height: 330px;
 }
 
 @media screen and (min-width: 768px) {
@@ -121,7 +124,7 @@
 .categories-books {
   max-width: 308px;
   color: rgba(17, 17, 17, 0.6);
-  max-height: 150px;
+  height: 100%;
 }
 
 /* @media screen and (min-width: 768px) {
@@ -139,10 +142,9 @@
   margin: 0 auto;
   max-width: 335px;
   width: 100%;
-  height: 100px;
+  height: 100%;
   font-size: 16px;
   letter-spacing: -0.02em;
-  max-height: 150px;
 }
 
 /* @media screen and (min-width: 768px) {
@@ -333,7 +335,7 @@
     width: 100%;
     display: block;
     padding: 0;
-    max-height: 100%;
+    height: 100%;
   }
 }
 
