--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -44,20 +44,26 @@
               <a href="/src/index.html" data-link="/src/index.html">Home</a>
             </li>
             <li class="nav-modal-item">
-              <a href="#" data-link="/src/partials/books.html#books">Books</a>
+              <a href="#books" data-link="/src/partials/books.html#books"
+                >Books</a
+              >
             </li>
             <li class="nav-modal-item">
-              <a href="#" data-link="/src/partials/feedbacks.html#feedbacks"
+              <a
+                href="#feedbacks"
+                data-link="/src/partials/feedbacks.html#feedbacks"
                 >Feedbacks</a
               >
             </li>
             <li class="nav-modal-item">
-              <a href="#" data-link="/src/partials/events.html#events"
+              <a href="#events" data-link="/src/partials/events.html#events"
                 >Events</a
               >
             </li>
             <li class="nav-modal-item">
-              <a href="#" data-link="/src/partials/location.html#location"
+              <a
+                href="#location"
+                data-link="/src/partials/location.html#location"
                 >Contact</a
               >
             </li>
