--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -41,31 +41,19 @@
         <div class="nav-modal-list-conteiner">
           <ul class="nav-list">
             <li class="nav-modal-item">
-              <a href="/src/index.html" data-link="/src/index.html">Home</a>
+              <a href="/src/index.html">Home</a>
             </li>
             <li class="nav-modal-item">
-              <a href="#books" data-link="/src/partials/books.html#books"
-                >Books</a
-              >
+              <a href="#books">Books</a>
             </li>
             <li class="nav-modal-item">
-              <a
-                href="#feedbacks"
-                data-link="/src/partials/feedbacks.html#feedbacks"
-                >Feedbacks</a
-              >
+              <a href="#feedbacks">Feedbacks</a>
             </li>
             <li class="nav-modal-item">
-              <a href="#events" data-link="/src/partials/events.html#events"
-                >Events</a
-              >
+              <a href="#events">Events</a>
             </li>
             <li class="nav-modal-item">
-              <a
-                href="#location"
-                data-link="/src/partials/location.html#location"
-                >Contact</a
-              >
+              <a href="#location">Contact</a>
             </li>
           </ul>
         </div>
