--- a/src/css/books.css
+++ b/src/css/books.css
@@ -321,16 +321,25 @@
 }
 .book-img {
   width: 100%;
-  height: 322px;
+
   border-radius: 8px;
 }
 @media only screen and (min-width: 768px) {
   .list-books {
     width: calc((100% - 24px));
   }
+  .item.book-info {
+    max-height: 439px;
+  }
+  .book-img {
+    max-height: 483px;
+  }
 }
 
 @media screen and (min-width: 1440px) {
+  .books-list-placeholder {
+    min-width: 1004px;
+  }
   .categories-books {
     max-width: 308px;
     width: 100%;
@@ -338,26 +347,18 @@
     padding: 0;
     max-height: 100%;
   }
-}
-
-@media screen and (min-width: 1440px) {
   .books .container .books-wrapper {
     display: flex;
     max-width: 1440px;
     margin: 0 auto;
     column-gap: 24px;
   }
-}
-
-@media screen and (min-width: 1440px) {
   .books .container .books-wrapper .list-books .book-info .book-cover {
     max-width: 227px;
     max-height: 316px;
     min-height: 316px;
   }
-}
-@media screen and (min-width: 1440px) {
-  .books-list-placeholder {
-    min-width: 1004px;
+  .book-img {
+    max-height: 322px;
   }
 }
