--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -64,7 +64,7 @@
           </picture>
           <div class="hero-picture-text">
             <p class="hero-text">Save 15% on some books</p>
-            <a href="#books" class="hero-btn" type="button">Shop Now!</a>
+            <a href="#books" class="hero-btn">Shop Now!</a>
           </div>
         </li>
         <li class="swiper-slide hero">
@@ -95,7 +95,7 @@
           </picture>
           <div class="hero-picture-text">
             <p class="hero-text">Summer Sale! Up to -40% discounts</p>
-            <a href="#books" class="hero-btn" type="button">Shop Now!</a>
+            <a href="#books" class="hero-btn">Shop Now!</a>
           </div>
         </li>
         <li class="swiper-slide hero">
@@ -126,7 +126,7 @@
           </picture>
           <div class="hero-picture-text">
             <p class="hero-text">Last chance to buy our spring bestsellers</p>
-            <a href="#books" class="hero-btn" type="button">Shop Now!</a>
+            <a href="#books" class="hero-btn">Shop Now!</a>
           </div>
         </li>
       </ul>
