--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -41,7 +41,7 @@
         <div class="nav-modal-list-conteiner">
           <ul class="nav-list">
             <li class="nav-modal-item">
-              <a href="/src/index.html">Home</a>
+              <a href="./index.html">Home</a>
             </li>
             <li class="nav-modal-item">
               <a href="#books">Books</a>
@@ -53,7 +53,7 @@
               <a href="#events">Events</a>
             </li>
             <li class="nav-modal-item">
-              <a href="#location">Contact</a>
+              <a href="#location">Location</a>
             </li>
           </ul>
         </div>
