--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -20,12 +20,10 @@
     <div class="nav-modal" id="navModal">
       <nav>
         <div class="logo-menu-nav-conteiner">
-          <a class="logo-header-menu-nav" href="/src/index.html">
-            <img
-              class="img-logo-header"
-              src="/img/footer/logo-footer.svg"
-              alt="logo"
-            />
+          <a class="logo-header-menu-nav" href="/index.html">
+            <svg class="" width="84" height="36">
+              <use href="/img/symbol-defs.svg#icon-logo"></use>
+            </svg>
           </a>
           <button
             class="close-btn-burger"
