--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,7 +11,7 @@
       </svg>
     </button>
     <ul class="header-nav-list">
-      <li class="header-nav-item"><a href="/src/index.html">Home</a></li>
+      <li class="header-nav-item"><a href="./index.html">Home</a></li>
       <li class="header-nav-item"><a href="#books">Books</a></li>
       <li class="header-nav-item"><a href="#feedbacks">Feedbacks</a></li>
       <li class="header-nav-item"><a href="#events">Events</a></li>
@@ -20,7 +20,7 @@
     <div class="nav-modal" id="navModal">
       <nav>
         <div class="logo-menu-nav-conteiner">
-          <a class="logo-header-menu-nav" href="/index.html">
+          <a class="logo-header-menu-nav" href="./index.html">
             <svg class="" width="84" height="36">
               <use href="/img/symbol-defs.svg#icon-logo"></use>
             </svg>
