--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="container-footer">
       <div class="footer-part-first">
-        <a class="logo-footer" href="/src/index.html">
+        <a class="logo-footer" href="./index.html">
           <img
             class="img-logo-footer"
             src="/img/footer/logo-footer.svg"
@@ -10,7 +10,7 @@
           />
         </a>
         <ul class="footer-nav-list">
-          <li class="footer-nav-item"><a href="/src/index.html">Home</a></li>
+          <li class="footer-nav-item"><a href="./index.html">Home</a></li>
           <li class="footer-nav-item"><a href="#books">Books</a></li>
           <li class="footer-nav-item">
             <a href="#feedbacks">Feedback</a>
