--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -32,7 +32,9 @@
             <img src="./img/hero-img/b1-mob.png" alt="" />
           </picture>
           <div class="hero-picture-text">
-            <p class="hero-text">Get 10% off your first order</p>
+            <p class="hero-text">
+              <span class="span">Get 10% off your</span> first order
+            </p>
             <a href="#books" class="hero-btn">Shop Now!</a>
           </div>
         </li>
@@ -63,7 +65,9 @@
             <img src="./img/hero-img/b2-mob.png" alt="" />
           </picture>
           <div class="hero-picture-text">
-            <p class="hero-text">Save 15% on some books</p>
+            <p class="hero-text">
+              <span class="span">Save 15% on</span> some books
+            </p>
             <a href="#books" class="hero-btn">Shop Now!</a>
           </div>
         </li>
@@ -94,7 +98,9 @@
             <img src="./img/hero-img/b3-mob.png" alt="" />
           </picture>
           <div class="hero-picture-text">
-            <p class="hero-text">Summer Sale! Up to -40% discounts</p>
+            <p class="hero-text">
+              Summer Sale! <span class="span">Up to -40% discounts</span>
+            </p>
             <a href="#books" class="hero-btn">Shop Now!</a>
           </div>
         </li>
@@ -125,7 +131,10 @@
             <img src="./img/hero-img/b4-mob.png" alt="" />
           </picture>
           <div class="hero-picture-text">
-            <p class="hero-text">Last chance to buy our spring bestsellers</p>
+            <p class="hero-text">
+              Last chance to buy
+              <span class="span">our spring bestsellers</span>
+            </p>
             <a href="#books" class="hero-btn">Shop Now!</a>
           </div>
         </li>
