--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -12,13 +12,12 @@
   letter-spacing: -0.01em;
 }
 .swiper-slide.hero {
+  position: relative;
   padding: 0;
   border: 0;
   min-height: 199px;
 }
-.hero-images {
-  position: relative;
-}
+
 .hero-title-wrap {
   display: flex;
   align-items: center;
@@ -29,10 +28,14 @@
 }
 .hero-picture-text {
   position: absolute;
-  max-width: 172px;
+
   left: 16px;
-  bottom: 16px;
+  top: 5.625em;
 }
+.span {
+  display: block;
+}
+
 .hero-text {
   font-weight: 600;
   font-size: 20px;
@@ -41,6 +44,12 @@
   letter-spacing: -0.01em;
   color: #fff;
   margin-bottom: 16px;
+}
+
+@media only screen and (max-width: 360px) {
+  .hero-text {
+    margin-bottom: 0;
+  }
 }
 .hero-btn {
   display: flex;
@@ -76,7 +85,6 @@
   .hero-text {
     font-size: 32px;
     line-height: 1.2;
-    max-width: 274px;
   }
   .hero-btn {
     border-radius: 4px;
@@ -92,7 +100,7 @@
   }
 
   .hero-picture-text {
-    max-width: 274px;
+    top: 118px;
   }
 }
 
@@ -109,6 +117,6 @@
   }
 
   .hero-picture-text {
-    max-width: 100%;
+    top: 155px;
   }
 }
