--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -33,7 +33,7 @@
           </picture>
           <div class="hero-picture-text">
             <p class="hero-text">
-              <span class="span">Get 10% off your</span> first order
+              Get 10% off <span class="span">you first order</span>
             </p>
             <a href="#books" class="hero-btn">Shop Now!</a>
           </div>
@@ -66,7 +66,7 @@
           </picture>
           <div class="hero-picture-text">
             <p class="hero-text">
-              <span class="span">Save 15% on</span> some books
+              Save 15% on <span class="span">some books</span>
             </p>
             <a href="#books" class="hero-btn">Shop Now!</a>
           </div>
