--- a/src/css/books.css
+++ b/src/css/books.css
@@ -323,9 +323,15 @@
   pointer-events: none;
 }
 .book-img {
-  width: 100%;
-
+  min-width: 100%;
+  object-fit: cover;
   border-radius: 8px;
+}
+
+@media only screen and (max-width: 374px) {
+  .load-more {
+    padding: 12px 100px;
+  }
 }
 @media only screen and (min-width: 768px) {
   .categories-books {
