--- a/src/css/books.css
+++ b/src/css/books.css
@@ -245,37 +245,39 @@
 
 .custom-dropdown {
   position: relative;
-  width: 100%;
+
   user-select: none;
   border: 1px solid #baafa7;
   border-radius: 4px;
-  background-color: #baafa7;
+
+  z-index: 99999;
 }
 
 .custom-dropdown .selected {
-  width: 100%;
-  background: #baafa7;
+  position: relative;
+  z-index: 99999;
+  background: rgba(11, 5, 0, 0.15);
   padding: 10px;
   cursor: pointer;
-  border: 1px solid #baafa7;
+  border: 1px solid rgba(11, 5, 0, 0.15);
 }
 .categories-books {
   max-width: 342px;
 }
+
 .custom-dropdown .dropdown-list {
   position: absolute;
-  top: 100%;
+
   left: 0;
   right: 0;
   max-height: 400px;
-  background: #baafa7;
-
+  background: #999999ed;
   border: 1px solid #ccc;
   border-top: none;
   overflow-y: auto;
   display: none;
   z-index: 9999;
-  font-family: 'Rubik', sans-serif;
+
   font-weight: 400;
   font-size: 14px;
   line-height: 150%;
@@ -297,7 +299,7 @@
 }
 
 .custom-dropdown .dropdown-list::-webkit-scrollbar-track {
-  background: rgba(11, 5, 0, 0.15);
+  background: rgba(11, 5, 0, 0.05);
 }
 
 .custom-dropdown .dropdown-list::-webkit-scrollbar-thumb {
