--- a/src/css/books.css
+++ b/src/css/books.css
@@ -42,7 +42,6 @@
   justify-content: center;
   align-items: normal;
   flex-wrap: wrap;
-
   row-gap: 40px;
   column-gap: 24px;
 }
@@ -130,7 +129,6 @@
   .categories-books {
     max-width: 768px;
     display: flex;
-
     column-gap: 32px;
     padding: 40px 32px 100px 32px;
     margin: 0 auto;
@@ -245,13 +243,11 @@
 
 .custom-dropdown {
   position: relative;
-
   user-select: none;
   border: 1px solid #baafa7;
   border-radius: 4px;
-
   z-index: 99999;
-}
+} /* ← добавлена эта скобка */
 
 .custom-dropdown .selected {
   position: relative;
@@ -261,13 +257,13 @@
   cursor: pointer;
   border: 1px solid rgba(11, 5, 0, 0.15);
 }
+
 .categories-books {
   max-width: 342px;
 }
 
 .custom-dropdown .dropdown-list {
   position: absolute;
-
   left: 0;
   right: 0;
   max-height: 400px;
@@ -277,7 +273,6 @@
   overflow-y: auto;
   display: none;
   z-index: 9999;
-
   font-weight: 400;
   font-size: 14px;
   line-height: 150%;
@@ -311,6 +306,7 @@
   background: #e15d05;
   border-radius: 4px;
 }
+
 .custom-dropdown .selected::after {
   content: ' ';
   position: absolute;
@@ -324,6 +320,7 @@
   transform: translateY(-50%);
   pointer-events: none;
 }
+
 .book-img {
   min-width: 100%;
   object-fit: cover;
