--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11,6 +11,7 @@
 
 /* Sections style */
 @import url('./header.css');
+@import url('./loader.css');
 @import url('./hero.css');
 @import url('./books.css');
 @import url('./feedbacks.css');
