--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -28,7 +28,7 @@
 }
 .hero-picture-text {
   position: absolute;
-  max-width: 172px;
+
   left: 16px;
   top: 5.625em;
 }
@@ -40,6 +40,9 @@
   letter-spacing: -0.01em;
   color: #fff;
   margin-bottom: 16px;
+}
+.hero-picture-text span {
+  display: block;
 }
 @media only screen and (max-width: 360px) {
   .hero-text {
@@ -80,7 +83,6 @@
   .hero-text {
     font-size: 32px;
     line-height: 1.2;
-    max-width: 274px;
   }
   .hero-btn {
     border-radius: 4px;
@@ -96,10 +98,6 @@
   }
 
   .hero-picture-text {
-    max-width: 274px;
-  }
-
-  .hero-picture-text {
     top: 118px;
   }
 }
@@ -109,15 +107,10 @@
     font-size: 52px;
 
     line-height: 1.2;
-    max-width: 392px;
   }
   .hero-btn {
     width: 227px;
     height: 40px;
-  }
-
-  .hero-picture-text {
-    max-width: 100%;
   }
 
   .hero-picture-text {
