--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -32,7 +32,9 @@
             <img src="./img/hero-img/b1-mob.png" alt="" />
           </picture>
           <div class="hero-picture-text">
-            <p class="hero-text">Get 10% off your first order</p>
+            <p class="hero-text">
+              Get 10% off <span class="span">your first order</span>
+            </p>
             <a href="#books" class="hero-btn">Shop Now!</a>
           </div>
         </li>
@@ -60,10 +62,12 @@
               "
             />
 
-            <img src="./img/hero-img/b2-mob.png" alt="" />
+            <img src="./img/hero-img/b2-mob.png" alt="Border" />
           </picture>
           <div class="hero-picture-text">
-            <p class="hero-text">Save 15% on some books</p>
+            <p class="hero-text">
+              Save 15% on <span class="span">some books</span>
+            </p>
             <a href="#books" class="hero-btn">Shop Now!</a>
           </div>
         </li>
@@ -94,7 +98,9 @@
             <img src="./img/hero-img/b3-mob.png" alt="" />
           </picture>
           <div class="hero-picture-text">
-            <p class="hero-text">Summer Sale! Up to -40% discounts</p>
+            <p class="hero-text">
+              Summer Sale! <span class="span">Up to -40% discounts</span>
+            </p>
             <a href="#books" class="hero-btn">Shop Now!</a>
           </div>
         </li>
@@ -122,10 +128,13 @@
               "
             />
 
-            <img src="./img/hero-img/b4-mob.png" alt="" />
+            <img src="./img/hero-img/b4-mob.png" alt="Border" />
           </picture>
           <div class="hero-picture-text">
-            <p class="hero-text">Last chance to buy our spring bestsellers</p>
+            <p class="hero-text">
+              Last chance to buy our
+              <span class="span">spring bestsellers</span>
+            </p>
             <a href="#books" class="hero-btn">Shop Now!</a>
           </div>
         </li>
