--- a/src/css/books.css
+++ b/src/css/books.css
@@ -258,7 +258,7 @@
 
 .custom-dropdown .selected {
   width: 100%;
-  background: #baafa7;
+  background: rgba(11, 5, 0, 0.05);
   padding: 10px;
   cursor: pointer;
   border: 1px solid #baafa7;
@@ -272,7 +272,7 @@
   left: 0;
   right: 0;
   max-height: 400px;
-  background: #baafa7;
+  background: #9a9a9ae8;
 
   border: 1px solid #ccc;
   border-top: none;
@@ -330,6 +330,12 @@
 .js-listener-categories {
   width: 100%;
 }
+
+.book-img {
+  border-radius: 4px;
+  width: 100%;
+  object-fit: cover;
+}
 @media only screen and (min-width: 768px) {
   .categories-books {
     margin-left: auto;
@@ -366,5 +372,39 @@
   }
   .book-img {
     height: 322px;
+  }
+}
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 3px solid #fff;
+  border-radius: 50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+.loader::after {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 3px solid transparent;
+  border-bottom-color: #ff3d00;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
