--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -100,6 +100,9 @@
   .hero-picture-text {
     top: 118px;
   }
+  .hero-title {
+    max-width: 560px;
+  }
 }
 
 @media only screen and (min-width: 1440px) {
@@ -115,5 +118,8 @@
 
   .hero-picture-text {
     top: 155px;
+  }
+  .hero-title {
+    max-width: 100%;
   }
 }
