--- a/src/css/books.css
+++ b/src/css/books.css
@@ -226,7 +226,7 @@
   background-color: #e15d05;
   border-radius: 4px;
     padding: 12px 24px;
-    width: 328px;
+    width: 100%;
     height: 48px;
   display: none;
   margin: 0 auto;
@@ -239,6 +239,11 @@
   color: #fff;
 }
 
+@media screen and (min-width: 350px) {
+  .load-more {
+  width: 328px;
+  }
+}
 
 .books-subtitle-placeholder {
   display: flex;
