--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -29,10 +29,9 @@
               "
             />
 
-            <img src="./img/hero-img/b1-mob.png" alt="" />
+            <img src="./img/hero-img/b1-mob.png" alt="Border" />
           </picture>
           <div class="hero-picture-text">
-
             <p class="hero-text">
               Get 10% off <span class="span">your first order</span>
             </p>
@@ -67,7 +66,6 @@
             <img src="./img/hero-img/b2-mob.png" alt="Border" />
           </picture>
           <div class="hero-picture-text">
-
             <p class="hero-text">
               Save 15% on <span class="span">some books</span>
             </p>
@@ -99,10 +97,9 @@
               "
             />
 
-            <img src="./img/hero-img/b3-mob.png" alt="" />
+            <img src="./img/hero-img/b3-mob.png" alt="Border" />
           </picture>
           <div class="hero-picture-text">
-
             <p class="hero-text">
               Summer Sale! <span class="span">Up to -40% discounts</span>
             </p>
@@ -137,7 +134,6 @@
             <img src="./img/hero-img/b4-mob.png" alt="Border" />
           </picture>
           <div class="hero-picture-text">
-
             <p class="hero-text">
               Last chance to buy our
               <span class="span">spring bestsellers</span>
