--- a/src/css/books.css
+++ b/src/css/books.css
@@ -374,6 +374,7 @@
 .book-img {
   border-radius: 4px;
   width: 100%;
+  height: 487px;
   object-fit: cover;
 }
 @media only screen and (max-width: 378px) {
@@ -406,6 +407,10 @@
     max-height: 51px;
     border-radius: 4px;
   }
+  .book-img {
+    height: 483px;
+    width: 340px;
+  }
 }
 
 @media screen and (min-width: 1440px) {
@@ -436,6 +441,7 @@
   }
   .book-img {
     height: 322px;
+    width: 227px;
   }
   .books-subtitle-placeholder {
     display: none;
