--- a/src/partials/feedbacks.html
+++ b/src/partials/feedbacks.html
@@ -20,6 +20,7 @@
               srcset="/img/feedbacks/jane.png 1x, /img/feedbacks/jane@2x.png 2x"
               alt="Jane"
               src="/img/feedbacks/jane.png"
+              width="48"
             />
             <div>
               <h3 class="name-title">Jane Doe</h3>
@@ -37,6 +38,7 @@
               srcset="/img/feedbacks/john.png 1x, /img/feedbacks/john@2x.png 2x"
               alt="John"
               src="/img/feedbacks/john.png"
+              width="48"
             />
             <div>
               <h3 class="name-title">John Smith</h3>
@@ -57,6 +59,7 @@
               "
               src="/img/feedbacks/emily.png"
               alt="John"
+              width="48"
             />
             <div>
               <h3 class="name-title">Emily Johnson</h3>
@@ -77,6 +80,7 @@
               "
               alt="Michael"
               src="/img/feedbacks/michael.png"
+              width="48"
             />
             <div>
               <h3 class="name-title">Michael Brown</h3>
